tests/snapshots/wrapper_snapshots__valid__bare_capture_keyword.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"nohup\" :command+args)\"#)"
---
[
    Wrapper {
        command: "nohup",
        steps: [
            Positional {
                patterns: [],
                capture: Some(
                    CommandArgs,
                ),
            },
        ],
    },
]
