tests/snapshots/wrapper_snapshots__valid__bare_capture_keyword_args_only.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"x\" :args)\"#)"
---
[
    Wrapper {
        command: "x",
        steps: [
            Positional {
                patterns: [],
                capture: Some(
                    Args,
                ),
            },
        ],
    },
]
