tests/snapshots/wrapper_snapshots__valid__bare_capture_keyword_command_only.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"x\" :command)\"#)"
---
[
    Wrapper {
        command: "x",
        steps: [
            Positional {
                patterns: [],
                capture: Some(
                    Command,
                ),
            },
        ],
    },
]
