tests/snapshots/wrapper_snapshots__valid__flag_double_dash.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"terragrunt\" (flag \"--\" :command+args))\"#)"
---
[
    Wrapper {
        command: "terragrunt",
        steps: [
            Flag {
                name: "--",
                capture: CommandArgs,
            },
        ],
    },
]
