tests/snapshots/wrapper_snapshots__valid__flag_named.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"nix-shell\" (flag \"--run\" :command+args))\"#)"
---
[
    Wrapper {
        command: "nix-shell",
        steps: [
            Flag {
                name: "--run",
                capture: CommandArgs,
            },
        ],
    },
]
