tests/snapshots/wrapper_snapshots__valid__multiple_wrappers.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"\n            (wrapper \"nohup\"      :command+args)\n            (wrapper \"ssh\"        (positional * :command+args))\n            (wrapper \"mise\"       (positional \"exec\") (flag \"--\" :command+args))\n            \"#)"
---
[
    Wrapper {
        command: "nohup",
        steps: [
            Positional {
                patterns: [],
                capture: true,
            },
        ],
    },
    Wrapper {
        command: "ssh",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Wildcard,
                        bind_fact: None,
                    },
                ],
                capture: true,
            },
        ],
    },
    Wrapper {
        command: "mise",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Literal(
                            "exec",
                        ),
                        bind_fact: None,
                    },
                ],
                capture: false,
            },
            Flag {
                name: "--",
            },
        ],
    },
]
