tests/snapshots/wrapper_snapshots__valid__positional_literal.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"docker\" (positional \"exec\" :command+args))\"#)"
---
[
    Wrapper {
        command: "docker",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Literal(
                            "exec",
                        ),
                        bind_fact: None,
                    },
                ],
                capture: true,
            },
        ],
    },
]
