tests/snapshots/wrapper_snapshots__valid__positional_multiple_literals.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"x\" (positional \"a\" \"b\" :command+args))\"#)"
---
[
    Wrapper {
        command: "x",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Literal(
                            "a",
                        ),
                        bind_fact: None,
                    },
                    WrapperPattern {
                        expr: Literal(
                            "b",
                        ),
                        bind_fact: None,
                    },
                ],
                capture: true,
            },
        ],
    },
]
