tests/snapshots/wrapper_snapshots__valid__positional_no_patterns.snap
---
source: tests/wrapper_snapshots.rs
assertion_line: 53
expression: "parse_wrappers(r#\"(wrapper \"nohup\" (positional :command+args))\"#)"
---
[
    Wrapper {
        command: "nohup",
        steps: [
            Positional {
                patterns: [],
                capture: true,
            },
        ],
    },
]
