tests/snapshots/wrapper_snapshots__valid__positional_or_pattern.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"x\" (positional (or \"foo\" \"bar\") :command+args))\"#)"
---
[
    Wrapper {
        command: "x",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Or(
                            [
                                Literal(
                                    "foo",
                                ),
                                Literal(
                                    "bar",
                                ),
                            ],
                        ),
                        bind_fact: None,
                    },
                ],
                capture: true,
            },
        ],
    },
]
