tests/snapshots/wrapper_snapshots__valid__positional_or_then_flag.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"nix\" (positional (or \"shell\" \"develop\")) (flag \"--command\" :command+args))\"#)"
---
[
    Wrapper {
        command: "nix",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Or(
                            [
                                Literal(
                                    "shell",
                                ),
                                Literal(
                                    "develop",
                                ),
                            ],
                        ),
                        bind_fact: None,
                    },
                ],
                capture: false,
            },
            Flag {
                name: "--command",
            },
        ],
    },
]
