tests/snapshots/wrapper_snapshots__valid__positional_validate_then_flag.snap
---
source: tests/wrapper_snapshots.rs
expression: "parse_wrappers(r#\"(wrapper \"mise\" (positional \"exec\") (flag \"--\" :command+args))\"#)"
---
[
    Wrapper {
        command: "mise",
        steps: [
            Positional {
                patterns: [
                    WrapperPattern {
                        expr: Literal(
                            "exec",
                        ),
                        bind_fact: None,
                    },
                ],
                capture: false,
            },
            Flag {
                name: "--",
            },
        ],
    },
]
